# chip-8-emulator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml  test.yml
chip_8/: Cargo.toml
chip_8/src/: chip_8.rs  components.rs  instruction.rs  instructions.rs  lib.rs  memory.rs  processor.rs
chip_8/src/chip_8/: config.rs  memory.rs  system.rs
chip_8/src/instruction/: execute.rs  instruction.rs  opcode.rs  parse.rs
chip_8/src/instructions/: parse.rs
chip_8/src/tests/: lib.rs  mod.rs
cli/: Cargo.toml
cli/src/: main.rs  timer.rs  ui.rs  waiter.rs
cli/src/ui/: app.rs  debug_screen.rs  mod.rs  pixel_display.rs  size_error.rs  stats.rs  widget.rs
