[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip_8 = { path = "../chip_8" }
crossterm = "0.27"
ratatui = { version = "0.26.1", features = ["unstable-rendered-line-info"] }
